--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -33,12 +33,16 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.4.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.15",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
     "core-js": "^3.18.3",
+    "jest": "^27.2.5",
     "react-is": "^17.0.2",
     "typescript": "^4.4.4",
     "webpack": "^5.58.2"
