--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "projects/tks-exercise-tracker"]
 	path = projects/tks-exercise-tracker
 	url = git@github.com:OZahnitko/tks-exercise-tracker.git
+[submodule "packages/tks-component-library"]
+	path = packages/tks-component-library
+	url = git@github.com:OZahnitko/tks-component-library.git
