--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "projects/tks-game-guides"]
 	path = projects/tks-game-guides
 	url = git@github.com:OZahnitko/tks-game-guides.git
+[submodule "projects/tks-game-library-manager"]
+	path = projects/tks-game-library-manager
+	url = git@github.com:OZahnitko/tks-game-library-manager.git
